		Attendance: added extra role to allow form group attendance to be restricted to own form group
		Finance: added ability to bulk issue invoices without sending email
		Finance: tweaked interface for display of payment log to make it more usable
		Finance: added ability to view and print receipts for refunded invoices
		Finance: fixed bug preventing reminder emails from being sent
		Finance: fixed bug leading to invoice values changing (in print view only) after issue 
		Formal Assessment: added subject name column to Internal Assessment view
		Library: added new type to store Audio/Visual equipment
		Markbook: added a class average row to the bottom of markbook views (when Weighting is enabled)
		Markbook: fixed order for first markbook column not saving properly
		Markbook: allow decimal values for markbook column attainment raw max
		School Admin: fixed timezone issue in display of dates in Special Days view
		School Admin: added notification settings page for managing system-wide notification events
		Students: added ability to store internal documents against student application forms
		Students: fixed bug preventing upload of application form documents when cookies disabled
		Students: fixed bug preventing some application form language/citizenship fields from not being saved
		Students: added settable thresholds for issuing academic alerts
		Students: added settable thresholds for issuing behaviour alerts
		Students: added extra action to allow deleting of application forms to be disabled
		Timetable: fixed TT not being navigable if user is not involved in any timetable
		Timetable Admin: fix bulk checking bug in Tie Days to Dates
		Timetable Admin: widened listing of staff in Course Enrolment by Person to include all staff (not just Teaching staff)
		Timetable: added option to display either Day Of The Week or Timetable Day Short Name in column header of timetables